# ai-health-coach

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
evidence/pages/: evaluation.md  index.md  retention.md
evidence/sources/health_coach/: ai_evaluations.sql  coaching_context.sql  cohort_retention.sql  connection.yaml  connection.yaml.bak
src/: cli.py
src/data_gen/: generate.py
src/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
src/dbt_project/models/marts/: mart_ai_evaluation.sql  mart_coaching_context.sql  mart_cohort_retention.sql  schema.yml
src/dbt_project/models/staging/: src_raw.yml  stg_daily_metrics.sql  stg_feature_events.sql  stg_members.sql  stg_sessions.sql
src/llm/: coach.py  prompts.py  router.py
tests/: test_generate.py  test_llm.py
